test_suite/tests/ui/struct-representation/internally-tagged-unit.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(tag = "type")]
struct U;

fn main() {}
